// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontSizeAdjust renders 0 1`] = `
Array [
  .c0 {
  font-size-adjust: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSizeAdjust renders function 1`] = `
Array [
  .c0 {
  font-size-adjust: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSizeAdjust renders invalid theme path 1`] = `
Array [
  .c0 {
  font-size-adjust: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSizeAdjust renders negative number 1`] = `
Array [
  .c0 {
  font-size-adjust: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSizeAdjust renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  font-size-adjust: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-size-adjust: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-size-adjust: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-size-adjust: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-size-adjust: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontSizeAdjust renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-size-adjust: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-size-adjust: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-size-adjust: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-size-adjust: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-size-adjust: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-size-adjust: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-size-adjust: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontSizeAdjust renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  font-size-adjust: July;
}

@media May {
  .c0 {
    font-size-adjust: August;
  }
}

@media April {
  .c0 {
    font-size-adjust: September;
  }
}

@media January {
  .c0 {
    font-size-adjust: November;
  }
}

@media April {
  .c0 {
    font-size-adjust: August;
  }
}

@media June {
  .c0 {
    font-size-adjust: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: July;
}

@media May {
  .c0 {
    font-size-adjust: August;
  }
}

@media April {
  .c0 {
    font-size-adjust: September;
  }
}

@media January {
  .c0 {
    font-size-adjust: November;
  }
}

@media April {
  .c0 {
    font-size-adjust: August;
  }
}

@media June {
  .c0 {
    font-size-adjust: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-size-adjust: November;
  }
}

@media April {
  .c0 {
    font-size-adjust: January;
  }
}

@media January {
  .c0 {
    font-size-adjust: December;
  }
}

@media April {
  .c0 {
    font-size-adjust: April;
  }
}

@media June {
  .c0 {
    font-size-adjust: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-size-adjust: November;
  }
}

@media April {
  .c0 {
    font-size-adjust: January;
  }
}

@media January {
  .c0 {
    font-size-adjust: December;
  }
}

@media April {
  .c0 {
    font-size-adjust: April;
  }
}

@media June {
  .c0 {
    font-size-adjust: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontSizeAdjust renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    font-size-adjust: July;
  }
}

@media April {
  .c0 {
    font-size-adjust: August;
  }
}

@media January {
  .c0 {
    font-size-adjust: September;
  }
}

@media April {
  .c0 {
    font-size-adjust: November;
  }
}

@media June {
  .c0 {
    font-size-adjust: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-size-adjust: July;
  }
}

@media April {
  .c0 {
    font-size-adjust: August;
  }
}

@media January {
  .c0 {
    font-size-adjust: September;
  }
}

@media April {
  .c0 {
    font-size-adjust: November;
  }
}

@media June {
  .c0 {
    font-size-adjust: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-size-adjust: January;
  }
}

@media April {
  .c0 {
    font-size-adjust: December;
  }
}

@media January {
  .c0 {
    font-size-adjust: April;
  }
}

@media April {
  .c0 {
    font-size-adjust: May;
  }
}

@media June {
  .c0 {
    font-size-adjust: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-size-adjust: January;
  }
}

@media April {
  .c0 {
    font-size-adjust: December;
  }
}

@media January {
  .c0 {
    font-size-adjust: April;
  }
}

@media April {
  .c0 {
    font-size-adjust: May;
  }
}

@media June {
  .c0 {
    font-size-adjust: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontSizeAdjust renders postitive number 1`] = `
Array [
  .c0 {
  font-size-adjust: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSizeAdjust renders string 1`] = `
Array [
  .c0 {
  font-size-adjust: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSizeAdjust renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`fontSizeAdjust renders valid theme path 1`] = `
Array [
  .c0 {
  font-size-adjust: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-size-adjust: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
